tests/tests_int/DivisionByZero.out
Interpreter error: attempted to divide by zero at line 4, column 17