tests/tests_int/DivisionByZero.fo
fun int main() = 
    let x = 10 in
    let y = 0 in
    let z = x / 0 in
    write(z)